Jar now able to launch without specifying JavaFX libraries